Minor changes for yellow flags